<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/phone_number"
                android:inputType="phone" />
            
            <EditText
                android:id="@+id/mail_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/mail_address"
                android:inputType="textEmailAddress" />
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="5dp"
        android:stretchColumns="*" >

        <TableRow>
	        <Button
	            android:id="@+id/update"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/update" />
	
	        <Button
	            android:id="@+id/cancel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/delete" />
        </TableRow>
    </TableLayout>

</LinearLayout>