<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?background"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <RadioButton
                android:id="@+id/use_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/address" />

            <EditText
                android:id="@+id/address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/use_address"
                android:hint="@string/address"
                android:inputType="textCapWords|textPostalAddress" >

                <requestFocus />
            </EditText>

            <RadioButton
                android:id="@+id/use_location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_marginTop="10dp"
                android:text="@string/location" />

            <TableLayout
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/use_location"
                android:stretchColumns="*" >

                <TableRow>

                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:enabled="false"
                        android:hint="@string/latitude"
                        android:inputType="numberDecimal|numberSigned" />

                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:enabled="false"
                        android:hint="@string/longitude"
                        android:inputType="numberDecimal|numberSigned" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </ScrollView>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:padding="5dp"
        android:stretchColumns="*" >

        <TableRow>

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update" />

            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />
        </TableRow>
    </TableLayout>

</LinearLayout>